--- a/app/src/main/res/layout/activity_actualizar_contactos.xml
+++ b/app/src/main/res/layout/activity_actualizar_contactos.xml
@@ -28,7 +28,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnAtrasAU"
-        app:srcCompat="@drawable/contacto" />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/textViewAU"
